[gd_scene load_steps=3 format=3 uid="uid://ejyelg0drrkc"]

[ext_resource type="Script" path="res://scripts/map_ai.gd" id="1_f7qel"]
[ext_resource type="PackedScene" uid="uid://iesf8n20ul1b" path="res://scenes/team.tscn" id="2_6n0g7"]

[node name="MapAI" type="Node2D"]
script = ExtResource("1_f7qel")

[node name="Team" parent="." instance=ExtResource("2_6n0g7")]
team = 1

[node name="UnitContainer" type="Node2D" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
